--- a/reference.bib
+++ b/reference.bib
@@ -1,29 +1,29 @@
 % Encoding: UTF-8
 
-@String { AAAI     = {AAAI Conference on Artificial Intelligence} }
+@String { AAAI     = {AAAI} }
 @String { ADVMATH  = {Adv. Comput. Math.} }
 @String { ANM      = {Appl. Numer. Math.} }
-@String { BMVC     = {British Machine Vision Conference (BMVC)}}
+@String { BMVC     = {BMVC}}
 @String { CAD      = {Computer Aided Design} }
 @String { CAGD     = {Comput. Aided Geom. Des.} }
 @String { CGF      = {Comput. Graph. Forum} }
-@String { CVPR     = {Computer Vision and Pattern Recognition (CVPR)}}
-@String { ECCV     = {European Conference on Computer Vision (ECCV)}}
+@String { CVPR     = {CVPR}}
+@String { ECCV     = {ECCV}}
 @String { EG       = {Comput. Graph. Forum (EG)} }
 @String { ENGCOM   = {Eng. Comput.} }
-@String { ICCV     = {International Conference on Computer Vision (ICCV)}}
-@String { ICLR     = {International Conference on Learning Representations (ICLR)} }
-@String { ICML     = {International Conference on Machine Learning (ICML)}}
+@String { ICCV     = {ICCV}}
+@String { ICLR     = {ICLR} }
+@String { ICML     = {ICML}}
 @String { IJNME    = {Int. J. Numer. Meth. Eng.} }
 @String { IMR      = {Int. Meshing Roundtable} }
 @String { MATHCOMP = {Math. Comput.} }
-@String { NIPS     = {Neural Information Processing Systems (NeurIPS)}}
+@String { NIPS     = {NeurIPS}}
 @String { PG       = {Comput. Graph. Forum (PG) } }
 @String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
 @String { SGP      = {Comput. Graph. Forum (SGP)} }
 @String { SGPOLD   = {Symp. Geom. Proc.} }
 @String { SIG      = {ACM Trans. Graph. (SIGGRAPH)} }
-@String { threeDV  = {Proc. Int. Conf. on 3D Vision (3DV)} }
+@String { threeDV  = {3DV} }
 @String { TOG      = {ACM Trans. Graph.} }
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
@@ -360,7 +360,6 @@ year = {2016},
   title       = {{ShapeNet: An information-rich 3D model repository}},
   author      = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
   number      = {arXiv:1512.03012 [cs.GR]},
-  institution = {Stanford University --- Princeton University --- Toyota Technological Institute at Chicago},
   year        = {2015}
 }
 
@@ -762,7 +761,7 @@ pages = {35157–35178},
 @InProceedings{Graham2015,
   author    = {Ben Graham},
   title     = {{Sparse 3D convolutional neural networks}},
-  booktitle = {British Machine Vision Conference (BMVC)},
+  booktitle = BMVC,
   year      = {2015},
 }
 
@@ -1567,7 +1566,6 @@ year = {2020},
   author={Maaten, Laurens van der and Hinton, Geoffrey},
   title={Visualizing data using {t-SNE}},
   journal={Journal of machine learning research},
-  volume={9},
   year={2008}
 }
 
@@ -2563,6 +2561,13 @@ year = {2019}
   number  = {7},
 }
 
+@article{Xie2020,
+  title={{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
+  author={Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R and Guibas, Leonidas J and Litany, Or},
+  journal=ECCV,
+  year={2020}
+}
+
 @Article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
   title   = {{Structure extraction from texture via relative total variation}},
@@ -2653,6 +2658,13 @@ year = {2019}
   booktitle = CVPR,
   title     = {{FoldingNet: Point cloud auto-encoder via deep grid deformation}},
   year      = {2018},
+}
+
+@article{Yang2020,
+  title={Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
+  author={Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
+  journal=ECCV,
+  year={2020}
 }
 
 @Article{Yi2016,
