--- a/reference.bib
+++ b/reference.bib
@@ -403,11 +403,11 @@
   year      = {2020}
 }
 
-@techreport{Chang2015,
-  title  = {{ShapeNet}: An information-rich {3D} model repository},
-  author = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
-  number = {arXiv:1512.03012 [cs.GR]},
-  year   = {2015}
+@article{Chang2015,
+  title       = {{ShapeNet}: An information-rich {3D} model repository},
+  author      = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
+  journal      = {arXiv:1512.03012},
+  year        = {2015}
 }
 
 
