--- a/reference.bib
+++ b/reference.bib
@@ -28,12 +28,14 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
   booktitle = ICLR,
   year      = {2018}
 }
+
 
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
@@ -60,12 +62,14 @@
   year      = {2003}
 }
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
   title     = {The conversation: Deep audio-visual speech enhancement},
   year      = {2018}
 }
+
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -161,6 +165,7 @@
   year      = {2011}
 }
 
+
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
   title   = {Autocorrelation Descriptor for Efficient Co-Alignment of 3D Shape Collections},
@@ -170,10 +175,9 @@
   year    = {2016}
 }
 
-
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
-  title   = {{Segnet: A deep convolutional encoder-decoder architecture for image segmentation}},
+  title   = {Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
   journal = TPAMI,
   year    = {2017},
   volume  = {39},
@@ -202,6 +206,19 @@
   number  = {1}
 }
 
+@article{Battaglia2018,
+  title   = {Relational inductive biases, deep learning, and graph networks},
+  author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
+  journal = {arXiv preprint arXiv:1806.01261},
+  year    = {2018}
+}
+
+@inproceedings{Behley2019,
+  title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
+  author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
+  booktitle = ICCV,
+  year      = {2019}
+}
 
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
@@ -220,6 +237,7 @@
   number  = {8},
   pages   = {1798-1828}
 }
+
 
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
@@ -252,6 +270,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -348,6 +367,13 @@
   year    = {2017}
 }
 
+@inproceedings{Brown2020,
+  title     = {Language models are few-shot learners},
+  author    = {Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+  booktitle = NIPS,
+  year      = {2020}
+}
+
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
@@ -356,7 +382,7 @@
 }
 
 @article{Calakli2011,
-  author  = {Calakli, F. and Taubin, G.},
+  author  = {Calakli, Fatih and Taubin, Gabriel},
   title   = {{SSD}: Smooth signed distance surface reconstruction},
   journal = CGF,
   year    = {2011},
@@ -404,18 +430,17 @@
 }
 
 @article{Chang2015,
-  title       = {{ShapeNet}: An information-rich {3D} model repository},
-  author      = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
-  journal      = {arXiv:1512.03012},
-  year        = {2015}
+  title   = {{ShapeNet}: An information-rich {3D} model repository},
+  author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
+  journal = {arXiv:1512.03012},
+  year    = {2015}
 }
 
-
-@article{Chang2017,
-  author  = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
-  journal = threeDV,
-  title   = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
-  year    = {2017}
+@inproceedings{Chang2017,
+  author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
+  title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
+  booktitle = threeDV,
+  year      = {2017}
 }
 
 @inproceedings{Chellapilla2006,
@@ -459,6 +484,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
@@ -471,6 +497,20 @@
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
   booktitle = ICCV,
   year      = {2019}
+}
+
+@article{Chen2020,
+  title   = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
+  author  = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
+  journal = NIPS,
+  year    = {2020}
+}
+
+@inproceedings{Chen2020a,
+  author    = {Xinlei Chen and Kaiming He},
+  title     = {Exploring Simple Siamese Representation Learning},
+  booktitle = CVPR,
+  year      = {2021}
 }
 
 @article{Cho2014,
@@ -489,12 +529,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
   title     = {{4D} spatio-temporal convnets: {Minkowski} convolutional neural networks},
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -664,7 +706,6 @@
   year      = {2014}
 }
 
-
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
@@ -696,8 +737,7 @@
   journal = SGP,
   year    = {2008},
   volume  = {27},
-  number  = {5},
-  issn    = {1467-8659}
+  number  = {5}
 }
 
 @article{Erhan2010,
@@ -708,6 +748,7 @@
   volume  = {11},
   number  = {19}
 }
+
 
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
@@ -725,6 +766,7 @@
   year      = {2017},
   publiser  = {IEEE}
 }
+
 
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
@@ -802,7 +844,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Genova2020,
   title     = {Local Deep Implicit Functions for {3D} Shape},
   author    = {Genova, Kyle and Cole, Forrester and Sud, Avneesh and Sarna, Aaron and Funkhouser, Thomas},
@@ -856,6 +897,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Graham2015,
   author    = {Ben Graham},
   title     = {Sparse {3D} convolutional neural networks},
@@ -870,12 +912,18 @@
   year    = {2017}
 }
 
-
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
   title     = {{3D} semantic segmentation with submanifold sparse convolutional networks},
   booktitle = CVPR,
   year      = 2018
+}
+
+@inproceedings{Grill2020,
+  author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
+  title     = {Bootstrap Your Own Latent: A New Approach to Self-Supervised Learning},
+  booktitle = NIPS,
+  year      = {2020}
 }
 
 @inproceedings{Gropp2020,
@@ -915,6 +963,7 @@
   year    = {2018},
   volume  = {37}
 }
+
 
 @article{Guo2015,
   author  = {Guo, Kan and Zou, Dongqing and Chen, Xiaowu},
@@ -1104,9 +1153,16 @@
   number  = {3}
 }
 
+@inproceedings{Hou2021,
+  title     = {Exploring Data-Efficient {3D} Scene Understanding with Contrastive Scene Contexts},
+  author    = {Hou, Ji and Graham, Benjamin and Nie{\ss}ner, Matthias and Saining Xie},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
 @article{Hu2012,
   author  = {Ruizhen Hu and Lubin Fan and Ligang Liu},
-  title   = {{Co-segmentation of 3D shapes via subspace clustering}},
+  title   = {Co-segmentation of {3D} shapes via subspace clustering},
   journal = SGP,
   year    = {2012},
   volume  = {31},
@@ -1133,7 +1189,7 @@
 
 @article{Huang2011a,
   author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas},
-  title   = {{Joint shape segmentation with linear programming}},
+  title   = {Joint shape segmentation with linear programming},
   journal = SA,
   year    = {2011},
   volume  = {30},
@@ -1305,6 +1361,7 @@
   volume  = {34},
   number  = {4}
 }
+
 @article{Kalogerakis2010,
   author  = {Kalogerakis, Evangelos and Hertzmann, Aaron and Singh, Karan},
   title   = {Learning {3D} mesh segmentation and labeling},
@@ -1540,6 +1597,15 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
+@article{Lewiner2010,
+  author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
+  title   = {Fast Generation of Pointerless {Octree} Duals},
+  journal = {Computer Graphics Forum},
+  volume  = {29},
+  number  = {5},
+  year    = {2010}
+}
+
 @article{Li2011,
   author  = {Li, Yangyan and Wu, Xiaokun and Chrysathou, Yiorgos and Sharf, Andrei and Cohen-Or, Daniel and Mitra, Niloy J.},
   title   = {{GlobFit}: Consistently fitting primitives by discovering global relations},
@@ -1573,14 +1639,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
-
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -1606,6 +1670,7 @@
   howpublished = {arXiv:1706.07036 [cs.CV]}
 }
 
+
 @article{Liu2007,
   author  = {Ligang Liu and Chiew-Lan Tai and Zhongping Ji and Guojin Wang},
   title   = {Non-Iterative approach for global mesh optimization},
@@ -1614,6 +1679,7 @@
   volume  = {39},
   number  = {9}
 }
+
 
 @inproceedings{Liu2018,
   author    = {Zhijian Liu and William T. Freeman and Joshua B. Tenenbaum and Jiajun Wu},
@@ -1648,6 +1714,27 @@
   author    = {Liu, Lingjie and Gu, Jiatao and Zaw Lin, Kyaw and Chua, Tat-Seng and Theobalt, Christian},
   booktitle = NIPS,
   year      = {2020}
+}
+
+@article{Liu2020a,
+  title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
+  author  = {Yunze Liu and Li Yi and Shanghang Zhang and Qingnan Fan and Thomas Funkhouser and Hao Dong},
+  journal = {arXiv:2012.13089},
+  year    = {2020}
+}
+
+@inproceedings{Liu2020b,
+  title     = {A Closer Look at Local Aggregation Operators in Point Cloud Analysis},
+  author    = {Liu, Ze and Hu, Han and Cao, Yue and Zhang, Zheng and Tong, Xin},
+  booktitle = ECCV,
+  year      = {2020}
+}
+
+@article{Liu2021,
+  title   = {{OctSurf}: Efficient hierarchical voxel-based molecular surface representation for protein-ligand affinity prediction},
+  journal = {Journal of Molecular Graphics and Modelling},
+  year    = {2021},
+  author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
 
 @inproceedings{Loffe2015,
@@ -1814,7 +1901,7 @@
 
 @article{Moon2014,
   author  = {Moon, Bochang and Carr, Nathan and Yoon, Sung-Eui},
-  title   = {{Adaptive rendering based on weighted local regression}},
+  title   = {Adaptive rendering based on weighted local regression},
   journal = SIG,
   year    = {2014},
   volume  = {33},
@@ -1848,7 +1935,7 @@
 
 @inproceedings{Nguyen2012,
   author    = {Nguyen, C.V. and Izadi, S. and Lovell, D.},
-  title     = {{Modeling Kinect sensor noise for improved 3D reconstruction and tracking}},
+  title     = {Modeling Kinect sensor noise for improved {3D} reconstruction and tracking},
   booktitle = {3D Imaging, Modeling, Processing, Visualization and Transmission (3DIMPVT)},
   year      = {2012}
 }
@@ -1925,7 +2012,7 @@
 }
 
 @inproceedings{Park2019,
-  title     = {{DeepSDF}: Learning Continuous Signed Distance Functions for Shape Representation},
+  title     = {{DeepSDF}: Learning continuous signed distance functions for shape representation},
   author    = {Park, Jeong Joon and Florence, Peter and Straub, Julian and Newcombe, Richard and Lovegrove, Steven},
   booktitle = CVPR,
   year      = {2019}
@@ -1980,6 +2067,13 @@
   title     = {{PointNet}: Deep learning on point sets for {3D} classification and segmentation},
   booktitle = CVPR,
   year      = {2017}
+}
+
+@inproceedings{Qi2019,
+  author    = {Qi, Charles R and Litany, Or and He, Kaiming and Guibas, Leonidas J},
+  title     = {Deep {Hough} Voting for {3D} Object Detection in Point Clouds},
+  booktitle = CVPR,
+  year      = {2019}
 }
 
 @inproceedings{Radford2016,
@@ -2104,7 +2198,7 @@
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
-  title   = {{Kinect range sensing: structured-light versus time-of-flight Kinect}},
+  title   = {{Kinect} range sensing: structured-light versus time-of-flight {Kinect}},
   journal = {Journal of Computer Vision and Image Understanding},
   year    = {2015},
   volume  = {13}
@@ -2119,7 +2213,7 @@
 
 @inproceedings{Savva2016,
   author    = {M. Savva and F. Yu and Hao Su and M. Aono and B. Chen and D. Cohen-Or and W. Deng and Hang Su and S. Bai and X. Bai and N. Fish and J. Han and E. Kalogerakis and E. G. Learned-Miller and Y. Li and M. Liao and S. Maji and A. Tatsuma and Y. Wang and N. Zhang and Z. Zhou 4},
-  title     = {{SHREC'16 Track -- Large-scale 3D shape retrieval from ShapeNet Core55}},
+  title     = {{SHREC'16 Track} -- Large-scale {3D} shape retrieval from {ShapeNetCore55}},
   booktitle = {Eurographics Workshop on 3D Object Retrieval},
   year      = {2016}
 }
@@ -2166,7 +2260,7 @@
 
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
-  title   = {{Consistent mesh partitioning and skeletonisation using the shape diameter function}},
+  title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
   journal = {Vis. Comput.},
   year    = {2008},
   volume  = {24},
@@ -2190,6 +2284,15 @@
   number  = {3}
 }
 
+@article{Sharf2007,
+  title   = {Interactive topology-aware surface reconstruction},
+  author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
+  journal = SIG,
+  volume  = {26},
+  number  = {3},
+  year    = {2007}
+}
+
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
   author    = {Sharma, Abhishek and Grau, Oliver and Fritz, Mario},
@@ -2197,24 +2300,24 @@
   year      = {2016}
 }
 
+
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
-  title     = {{CSGNet: Neural shape parser for constructive solid geometry}},
+  title     = {{CSGNet}: Neural shape parser for constructive solid geometry},
   booktitle = CVPR,
   year      = {2018}
 }
 
-
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
-  title   = {{Improved training with curriculum GANs}},
+  title   = {Improved training with curriculum {GANs}},
   journal = {arXiv preprint arXiv:1807.09295},
   year    = {2018}
 }
 
 @article{Shen2004,
   author  = {Yuzhong Shen and Barner, K.E.},
-  title   = {{Fuzzy vector median-based surface smoothing}},
+  title   = {Fuzzy vector median-based surface smoothing},
   journal = TVCG,
   year    = {2004},
   volume  = {10},
@@ -2232,7 +2335,7 @@
 
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
-  title   = {{A fast multigrid algorithm for mesh deformation}},
+  title   = {A fast multigrid algorithm for mesh deformation},
   journal = SIG,
   year    = {2006},
   volume  = {25},
@@ -2248,14 +2351,14 @@
 
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
-  title   = {{PointWise: An unsupervised point-wise feature learning network}},
+  title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
-  title   = {{Unsupervised 3D shape segmentation and co-segmentation via deep learning}},
+  title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
   journal = CAGD,
   year    = {2016},
   volume  = {43}
@@ -2272,21 +2375,21 @@
 
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
-  title     = {{Global versus local methods in nonlinear dimensionality reduction}},
+  title     = {Global versus local methods in nonlinear dimensionality reduction},
   booktitle = NIPS,
   year      = {2002}
 }
 
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
-  title     = {{Deep learning 3D shape surfaces using geometry images}},
+  title     = {Deep learning {3D} shape surfaces using geometry images},
   booktitle = ECCV,
   year      = {2016}
 }
 
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
-  title     = {{SurfNet: Generating 3D shape surfaces using deep residual networks}},
+  title     = {{SurfNet}: Generating {3D} shape surfaces using deep residual networks},
   booktitle = CVPR,
   year      = {2017}
 }
@@ -2314,7 +2417,7 @@
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
-  title        = {{Improved adversarial systems for 3D object generation and reconstruction}},
+  title        = {Improved adversarial systems for {3D} object generation and reconstruction},
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
@@ -2322,7 +2425,7 @@
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
-  note   = {{\tt arXiv:1405.4734 [cs.GR]}},
+  note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
 
@@ -2357,13 +2460,13 @@
   number  = {1}
 }
 
+
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
   booktitle = CVPR,
   title     = {Learning {3D} shape completion from laser scan data with weak supervision},
   year      = {2018}
 }
-
 
 @inproceedings{Su2015,
   author    = {Su, Hang and Maji, Subhransu and Kalogerakis, Evangelos and Learned-Miller, Erik},
@@ -2372,13 +2475,13 @@
   year      = {2015}
 }
 
+
 @inproceedings{Su2017,
   author    = {Hao Su and Haoqiang Fan and Leonidas Guibas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
@@ -2458,6 +2561,13 @@
   number  = {5}
 }
 
+@inproceedings{Takikawa2021,
+  title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
+  author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
+  year      = {2021},
+  booktitle = CVPR
+}
+
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
@@ -2523,6 +2633,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
   title     = {Learning shape abstractions by assembling volumetric primitives},
@@ -2551,6 +2662,13 @@
   title     = {Attention is all you need},
   booktitle = NIPS,
   year      = {2017}
+}
+
+@inproceedings{Velickovic2018,
+  title     = {Graph Attention Networks},
+  author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
+  booktitle = ICLR,
+  year      = {2018}
 }
 
 @inproceedings{Wald2019,
@@ -2657,13 +2775,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Wang2019a,
   author    = {Wang, Yue and Solomon, Justin M.},
   title     = {Deep Closest Point: Learning Representations for Point Cloud Registration},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @misc{Wang2019b,
   title        = {Deep high-resolution representation learning for visual recognition},
@@ -2681,13 +2799,41 @@
   number  = {5}
 }
 
+
+@inproceedings{Wang2020,
+  title   = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
+  author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
+  journal = {CVPR Workshops},
+  year    = {2020}
+}
+
+@inproceedings{Wang2020a,
+  title     = {Dense Contrastive Learning for Self-Supervised Visual Pre-Training},
+  author    = {Wang, Xinlong and Zhang, Rufeng and Shen, Chunhua and Kong, Tao and Li, Lei},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
+@article{Wang2020b,
+  author  = {Hanchen Wang and Qi Liu and Xiangyu Yue and Joan Lasenby and Matthew J. Kusner},
+  title   = {Pre-Training by Completing Point Clouds},
+  journal = {arXiv:2010.01089},
+  year    = {2020}
+}
+
+@inproceedings{Wang2021,
+  title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
+  author    = {Wang, Peng-Shuai and Yang, Yu-Qi and Zou, Qian-Fang and Wu, Zhirong and Liu, Yang and Tong, Xin},
+  booktitle = AAAI,
+  year      = {2021}
+}
+
 @misc{Warehouse2018,
   author = {3D Warehouse},
   title  = {{3D Warehouse}},
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
-
 
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
@@ -2799,6 +2945,13 @@
   year    = {2020}
 }
 
+@inproceedings{Xie2021,
+  title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
+  author    = {Xie, Zhenda and Lin, Yutong and Zhang, Zheng and Cao, Yue and Lin, Stephen and Hu, Han},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
   title   = {Structure extraction from texture via relative total variation},
@@ -2855,7 +3008,7 @@
 
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
-  title     = {{Perspective transformer nets: Learning single-view 3D object reconstruction without 3D supervision}},
+  title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
   booktitle = NIPS,
   year      = {2016}
 }
@@ -2878,7 +3031,7 @@
 
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
-  title     = {{3D object reconstruction from a single depth view with adversarial learning}},
+  title     = {{3D} object reconstruction from a single depth view with adversarial learning},
   booktitle = {ICCV Workshop},
   year      = {2017}
 }
@@ -2915,7 +3068,7 @@
 
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
-  title        = {{Large-scale 3D shape reconstruction and segmentation from ShapeNet Core55}},
+  title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
   howpublished = {arXiv:1710.06104 [cs.CV]},
   year         = {2017}
 }
@@ -2961,6 +3114,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
@@ -2988,7 +3142,6 @@
   booktitle = ECCV,
   year      = {2014}
 }
-
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -3066,6 +3219,13 @@
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
+}
+
+@article{Zhang2021,
+  title   = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
+  author  = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
+  journal = {arXiv:2101.02691},
+  year    = {2021}
 }
 
 @inproceedings{Zhao2019,
