--- a/reference.bib
+++ b/reference.bib
@@ -3,22 +3,22 @@
 @String { AAAI     = {AAAI} }
 @String { ADVMATH  = {Adv. Comput. Math.} }
 @String { ANM      = {Appl. Numer. Math.} }
-@String { BMVC     = {BMVC}}
+@String { BMVC     = {BMVC} }
 @String { CAD      = {Computer Aided Design} }
 @String { CAGD     = {Comput. Aided Geom. Des.} }
 @String { CGF      = {Comput. Graph. Forum} }
-@String { CVPR     = {CVPR}}
-@String { ECCV     = {ECCV}}
+@String { CVPR     = {CVPR} }
+@String { ECCV     = {ECCV} }
 @String { EG       = {Comput. Graph. Forum (EG)} }
 @String { ENGCOM   = {Eng. Comput.} }
-@String { ICCV     = {ICCV}}
-@String { ICLR     = {ICLR}}
-@String { ICML     = {ICML}}
+@String { ICCV     = {ICCV} }
+@String { ICLR     = {ICLR} }
+@String { ICML     = {ICML} }
 @String { IJNME    = {Int. J. Numer. Meth. Eng.} }
 @String { IMR      = {Int. Meshing Roundtable} }
 @String { MATHCOMP = {Math. Comput.} }
-@String { NIPS     = {NeurIPS}}
-@String { PG       = {Comput. Graph. Forum (PG) } }
+@String { NIPS     = {NeurIPS} }
+@String { PG       = {Comput. Graph. Forum (PG)} }
 @String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
 @String { SGP      = {Comput. Graph. Forum (SGP)} }
 @String { SGPOLD   = {Symp. Geom. Proc.} }
@@ -27,7 +27,6 @@
 @String { TOG      = {ACM Trans. Graph.} }
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
-
 
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
@@ -46,6 +45,7 @@
   number  = {3}
 }
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -61,7 +61,6 @@
   booktitle = SGPOLD,
   year      = {2003}
 }
-
 
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
@@ -79,6 +78,7 @@
   volume  = {28},
   number  = {12}
 }
+
 
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
@@ -165,7 +165,6 @@
   year      = {2011}
 }
 
-
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
   title   = {Autocorrelation Descriptor for Efficient Co-Alignment of 3D Shape Collections},
@@ -174,6 +173,7 @@
   number  = {1},
   year    = {2016}
 }
+
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -195,6 +195,24 @@
   title     = {GIFT: A real-time and scalable {3D} shape search engine},
   booktitle = CVPR,
   year      = {2016}
+}
+
+@article{Bailey2018,
+  author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
+  title   = {Fast and Deep Deformation Approximations},
+  year    = {2018},
+  volume  = {37},
+  number  = {4},
+  journal = SIG
+}
+
+@article{Bailey2020,
+  title   = {Fast and deep facial deformations},
+  author  = {Bailey, Stephen W and Omens, Dalton and Dilorenzo, Paul and O'Brien, James F},
+  journal = SIG,
+  volume  = {39},
+  number  = {4},
+  year    = {2020}
 }
 
 @article{Bajaj2003,
@@ -228,6 +246,7 @@
   year    = {2002}
 }
 
+
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
   journal = TPAMI,
@@ -237,7 +256,6 @@
   number  = {8},
   pages   = {1798-1828}
 }
-
 
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
@@ -264,13 +282,13 @@
   year      = {2014}
 }
 
+
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
   author    = {Bogo, Federica and Romero, Javier and Pons-Moll, Gerard and Black, Michael J},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -475,6 +493,7 @@
   year      = {2014}
 }
 
+
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -483,7 +502,6 @@
   volume  = {40},
   number  = {4}
 }
-
 
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
@@ -522,6 +540,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Choy2016,
   author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
@@ -536,7 +555,6 @@
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -706,6 +724,13 @@
   year      = {2014}
 }
 
+@article{Dosovitskiy2020,
+  title   = {An image is worth 16x16 words: Transformers for image recognition at scale},
+  author  = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
+  journal = {arXiv preprint arXiv:2010.11929},
+  year    = {2020}
+}
+
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
@@ -740,6 +765,7 @@
   number  = {5}
 }
 
+
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
   title   = {Why does unsupervised pre-training help deep learning?},
@@ -748,7 +774,6 @@
   volume  = {11},
   number  = {19}
 }
-
 
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
@@ -759,6 +784,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
@@ -766,7 +792,6 @@
   year      = {2017},
   publiser  = {IEEE}
 }
-
 
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
@@ -890,13 +915,13 @@
   publisher = {MIT Press}
 }
 
+
 @inproceedings{Goodfellow2016a,
   author    = {Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
   title     = {Generative adversarial networks},
   booktitle = NIPS,
   year      = {2016}
 }
-
 
 @inproceedings{Graham2015,
   author    = {Ben Graham},
@@ -956,6 +981,7 @@
   year         = {2010}
 }
 
+
 @article{Guerrero2018,
   author  = {Paul Guerrero and Yanir Kleiman and Maks Ovsjanikov and Niloy J. Mitra},
   title   = {{PCPNet}: Learning local shape properties from raw point clouds},
@@ -963,7 +989,6 @@
   year    = {2018},
   volume  = {37}
 }
-
 
 @article{Guo2015,
   author  = {Guo, Kan and Zou, Dongqing and Chen, Xiaowu},
@@ -988,6 +1013,13 @@
   archiveprefix = {arXiv},
   eprint        = {1912.12033},
   primaryclass  = {cs.CV}
+}
+
+@article{Guo2020,
+  title   = {{PCT}: Point cloud transformer},
+  author  = {Guo, Meng-Hao and Cai, Jun-Xiong and Liu, Zheng-Ning and Mu, Tai-Jiang and Martin, Ralph R and Hu, Shi-Min},
+  journal = {arXiv preprint arXiv:2012.09688},
+  year    = {2020}
 }
 
 @inproceedings{Gupta2016,
@@ -1167,6 +1199,13 @@
   year    = {2012},
   volume  = {31},
   number  = {5}
+}
+
+@inproceedings{Hu2019,
+  title   = {{RandLA-Net}: Efficient Semantic Segmentation of Large-Scale Point Clouds},
+  author  = {Hu, Qingyong and Yang, Bo and Xie, Linhai and Rosa, Stefano and Guo, Yulan and Wang, Zhihua and Trigoni, Niki and Markham, Andrew},
+  journal = CVPR,
+  year    = {2020}
 }
 
 @article{Huang2006,
@@ -1646,12 +1685,14 @@
   year      = 2018
 }
 
+
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
   journal = TOG,
   year    = {2020}
 }
+
 
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
@@ -1670,7 +1711,6 @@
   howpublished = {arXiv:1706.07036 [cs.CV]}
 }
 
-
 @article{Liu2007,
   author  = {Ligang Liu and Chiew-Lan Tai and Zhongping Ji and Guojin Wang},
   title   = {Non-Iterative approach for global mesh optimization},
@@ -1679,7 +1719,6 @@
   volume  = {39},
   number  = {9}
 }
-
 
 @inproceedings{Liu2018,
   author    = {Zhijian Liu and William T. Freeman and Joshua B. Tenenbaum and Jiajun Wu},
@@ -1715,7 +1754,6 @@
   booktitle = NIPS,
   year      = {2020}
 }
-
 @article{Liu2020a,
   title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
   author  = {Yunze Liu and Li Yi and Shanghang Zhang and Qingnan Fan and Thomas Funkhouser and Hao Dong},
@@ -1735,6 +1773,13 @@
   journal = {Journal of Molecular Graphics and Modelling},
   year    = {2021},
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
+}
+
+@article{Liu2021a,
+  title   = {Swin transformer: Hierarchical vision transformer using shifted windows},
+  author  = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
+  journal = {arXiv preprint arXiv:2103.14030},
+  year    = {2021}
 }
 
 @inproceedings{Loffe2015,
@@ -1926,6 +1971,15 @@
   number  = {7}
 }
 
+@article{Neumann2013,
+  title   = {Sparse localized deformation components},
+  author  = {Neumann, Thomas and Varanasi, Kiran and Wenger, Stephan and Wacker, Markus and Magnor, Marcus and Theobalt, Christian},
+  journal = SA,
+  volume  = {32},
+  number  = {6},
+  year    = {2013}
+}
+
 @inproceedings{Nguyen1990,
   author    = {Nguyen, Derrick and Widrow, Bernard},
   title     = {Improving the learning speed of 2-layer neural networks by choosing initial values of the adaptive weights},
@@ -2083,12 +2137,14 @@
   year      = {2016}
 }
 
+
 @techreport{Radford2018,
   author      = {Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
   institution = {OpenAI},
   title       = {Improving language understanding by generative pre-training},
   year        = {2018}
 }
+
 
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
@@ -2102,6 +2158,24 @@
   author    = {Rahimi, Ali and Recht, Benjamin},
   booktitle = NIPS,
   year      = {2008}
+}
+
+@article{Rainer2019,
+  author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
+  title   = {Neural {BTF} Compression and Interpolation},
+  journal = EG,
+  volume  = {38},
+  number  = {2},
+  year    = {2019}
+}
+
+@article{Rainer2020,
+  author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
+  title   = {Unified Neural Encoding of {BTFs}},
+  journal = EG,
+  volume  = 39,
+  number  = 2,
+  year    = 2020
 }
 
 @article{Ray2009,
@@ -2218,10 +2292,17 @@
   year      = {2016}
 }
 
+@inproceedings{Schaefer2004,
+  title     = {Dual marching cubes: Primal contouring of dual grids},
+  author    = {Schaefer, Scott and Warren, Joe},
+  booktitle = {Pacific Graphics},
+  year      = {2004}
+}
+
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
-  booktitle = {Applications of Computer Vision (WACV), 2015 IEEE Winter Conference on},
+  booktitle = {Applications of Computer Vision (WACV)},
   year      = {2015}
 }
 
@@ -2231,8 +2312,7 @@
   journal = TPAMI,
   year    = {2016},
   volume  = {38},
-  number  = {4},
-  issn    = {0162-8828}
+  number  = {4}
 }
 
 @inproceedings{Sedaghat2016,
@@ -2250,6 +2330,7 @@
   volume  = {31},
   number  = {6}
 }
+
 
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
@@ -2299,7 +2380,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
@@ -2415,6 +2495,7 @@
   year      = {2020}
 }
 
+
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
@@ -2428,6 +2509,7 @@
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
+
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -2460,7 +2542,6 @@
   number  = {1}
 }
 
-
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
   booktitle = CVPR,
@@ -2474,7 +2555,6 @@
   booktitle = ICCV,
   year      = {2015}
 }
-
 
 @inproceedings{Su2017,
   author    = {Hao Su and Haoqiang Fan and Leonidas Guibas},
@@ -2575,6 +2655,13 @@
   year      = {2020}
 }
 
+@inproceedings{Tang2020,
+  title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
+  author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
+  booktitle = ECCV,
+  year      = {2020}
+}
+
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -2583,6 +2670,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -2633,7 +2721,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
   title     = {Learning shape abstractions by assembling volumetric primitives},
@@ -2646,6 +2733,13 @@
   title     = {Sparsity invariant {CNNs}},
   booktitle = threeDV,
   year      = {2017}
+}
+
+@inproceedings{Ulyanov2018,
+  title     = {Deep image prior},
+  author    = {Ulyanov, Dmitry and Vedaldi, Andrea and Lempitsky, Victor},
+  booktitle = CVPR,
+  year      = {2018}
 }
 
 @article{Vallet2008,
@@ -2722,6 +2816,7 @@
   number  = {6}
 }
 
+
 @article{Wang2017,
   author  = {Wang, Peng-Shuai and Liu, Yang and Guo, Yu-Xiao and Sun, Chun-Yu and Tong, Xin},
   title   = {{O-CNN}: Octree-based convolutional neural networks for {3D} shape analysis},
@@ -2745,11 +2840,14 @@
   year      = {2018}
 }
 
+
 @article{Wang2018a,
   author  = {Peng-Shuai Wang and Chun-Yu Sun and Yang Liu and Xin Tong},
   title   = {{Adaptive O-CNN}: A patch-based deep representation of {3D} shapes},
   journal = SA,
-  year    = {2018}
+  year    = {2018},
+  volume  = {37},
+  number  = {6}
 }
 
 @article{Wang2018b,
@@ -2775,7 +2873,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Wang2019a,
   author    = {Wang, Yue and Solomon, Justin M.},
   title     = {Deep Closest Point: Learning Representations for Point Cloud Registration},
@@ -2798,7 +2895,6 @@
   volume  = {38},
   number  = {5}
 }
-
 
 @inproceedings{Wang2020,
   title   = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
@@ -2929,6 +3025,13 @@
   year      = {2019}
 }
 
+@article{Wu2021,
+  title   = {Cvt: Introducing convolutions to vision transformers},
+  author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
+  journal = {arXiv preprint arXiv:2103.15808},
+  year    = {2021}
+}
+
 @article{Xie2015,
   author  = {Xie, Zhige and Xu, Kai and Shan, Wen and Liu, Ligang and Xiong, Yueshan and Huang, Hui},
   title   = {Projective feature learning for {3D} shapes with multi-view depth images},
@@ -3050,6 +3153,7 @@
   year      = {2018}
 }
 
+
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
@@ -3114,7 +3218,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
@@ -3127,6 +3230,13 @@
   booktitle = CVPR,
   title     = {{PartNet}: A Recursive Part Decomposition Network for Fine-grained and Hierarchical Shape Segmentation},
   year      = {2019}
+}
+
+@inproceedings{Yu2021,
+  title     = {{Lite-HRNet}: A Lightweight High-Resolution Network},
+  author    = {Yu, Changqian and Xiao, Bin and Gao, Changxin and Yuan, Lu and Zhang, Lei and Sang, Nong and Wang, Jingdong},
+  booktitle = CVPR,
+  year      = {2021}
 }
 
 @inproceedings{Zaharescu2009,
@@ -3235,6 +3345,14 @@
   year      = {2019}
 }
 
+@article{Zhao2020,
+  title   = {Point transformer},
+  author  = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
+  journal = {arXiv preprint arXiv:2012.09164},
+  year    = {2020}
+}
+
+
 @article{Zheng2011,
   author  = {Zheng, Youyi and Fu, Hongbo and Au, Oscar Kin-Chung and Tai, Chiew-Lan},
   title   = {Bilateral normal filtering for mesh denoising},
@@ -3243,6 +3361,7 @@
   volume  = {17},
   number  = {10}
 }
+
 
 @inproceedings{Zheng2013,
   author    = {Zheng, Bo and Zhao, Yibiao and Yu, Joey C. and Ikeuchi, Katsushi and Zhu, Song-Chun},
@@ -3276,6 +3395,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Zhou2016,
   title     = {Fast global registration},
   author    = {Zhou, Qian-Yi and Park, Jaesik and Koltun, Vladlen},
@@ -3297,6 +3417,7 @@
   booktitle = ICCV,
   year      = {2017}
 }
+
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
